# scheduler

./: README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20230718085008_task.sql  20231225170645_users-and-google-auth.sql
backend/src/: config.rs  main.rs
backend/src/controllers/: auth.rs  tasks.rs
backend/src/middlewares/: auth.rs
backend/src/models/: auth.rs  tasks.rs
backend/src/routes/: auth.rs  mod.rs  root.rs  tasks.rs
backend/src/utils/: serializers.rs
frontend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
frontend/src/: app.html  store.ts
frontend/src/components/: AddTask.svelte  Box.svelte  Button.svelte  CurrentTask.svelte  Modal.svelte  NavButton.svelte  NextTask.svelte  Task.svelte  ToolBox.svelte
frontend/src/components/auth/: SignInWithGoogle.svelte  auth.d.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/tasks/: +page.server.ts  +page.svelte
frontend/src/routes/tasks/[id]/: +page.server.ts  +page.svelte
