[package]
name = "todo-rs-svelte-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.8"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
